Replace "new Integer()" with "Integer.valueOf()" and "assertEquals(true, ...)" with "assertTrue()"